Remove logo image and simplify logo display

--- a/index.html
+++ b/index.html
@@ -55,14 +55,6 @@
             letter-spacing: -0.02em;
             cursor: pointer;
             transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .logo img {
-            height: 28px;
-            width: auto;
         }
 
         .logo:hover {
@@ -951,10 +943,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo">
-            <img src="nouri-logo.png" alt="Nouri">
-            Nouri
-        </div>
+        <div class="logo">Nouri</div>
         <div class="nav-links">
             <a href="#servicios">Servicios</a>
             <a href="#casos">Casos</a>
@@ -1142,10 +1131,7 @@
     </section>
 
     <footer>
-        <div class="logo">
-            <img src="nouri-logo.png" alt="Nouri">
-            Nouri
-        </div>
+        <div class="logo">Nouri</div>
         <p>Automatización con IA — © 2026</p>
     </footer>
 
