Update button links and increase logo font size

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
 
         .logo {
-            font-size: 1rem;
+            font-size: 1.1rem;
             font-weight: 800;
             letter-spacing: -0.02em;
             cursor: pointer;
@@ -949,7 +949,7 @@
             <a href="#casos">Casos</a>
             <a href="#industrias">Industrias</a>
         </div>
-        <button class="nav-cta">Contacto</button>
+        <button class="nav-cta" onclick="window.open('https://wa.me/5491158729132', '_blank')">Contacto</button>
     </nav>
 
     <section class="hero">
@@ -959,7 +959,7 @@
                 <p class="subtitle">
                     Creamos agentes de IA que responden clientes, procesan pedidos y generan contenido. Implementación en semanas, no meses.
                 </p>
-                <a href="#contacto" class="cta-primary">Empezar ahora</a>
+                <a href="https://wa.me/5491158729132" target="_blank" class="cta-primary">Empezar ahora</a>
             </div>
             <div class="automation-grid">
                 <div class="glass-card dark">
@@ -1123,7 +1123,7 @@
         <div class="cta-final-content">
             <div class="cta-badge">Empezá hoy</div>
             <h2>¿Listo para optimizar tu operación?</h2>
-            <a href="mailto:contacto@nouri.com" class="cta-button-large">
+            <a href="https://wa.me/5491158729132" target="_blank" class="cta-button-large">
                 Solicitar demo
                 <span class="cta-arrow">→</span>
             </a>
